[package]
name = "box-stacker"
version = "0.1.0"
authors = ["ashneverdawn <ashneverdawn@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
amethyst = { version = "0.15", features = ["metal"] }
amethyst_physics = { version = "0.2.0" }
amethyst_nphysics = { version = "0.2.0" }
log = "0.4"